--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">Task_1</string>
+    <string name="app_name" translatable="false">Task_1</string>
+    <string name='hello_world'>Hello World!</string>
 </resources>
